@@ -6,6 +6,7 @@
           * geda_get_container_border_width
           * geda_get_widget_style
           * geda_get_widget_window
+          * geda_get_widget_requisition
 
 2020-03-13 Wiley E. Hill <wileyhill@gmail.com>
 
